--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,10 @@
 *{
     line-height: 1.5;
-    background-color: green;
+    background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
     font-family: 'Fjalla One', sans-serif;
 }
 
+body {
+    color: grey;
+    text-align: center;
+}
