--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,7 @@
 *{
     line-height: 1.5;
+    margin: 0;
+    padding: 0;
     background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
     font-family: 'Fjalla One', sans-serif;
 }
@@ -7,4 +9,12 @@
 body {
     color: grey;
     text-align: center;
+}
+
+ul {
+    list-style: none;
+}
+
+ol {
+    
 }
